<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="50dp"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tvFishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/fish_name"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:layout_marginLeft="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="45dp"
            android:text="@string/quantity"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="45dp" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="45dp"
            android:text="@string/_300_kg"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_marginLeft="155dp" />

        <Button
            android:id="@+id/btnSold"
            style="@style/MyButtonStyle"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:text="@string/sold2"
            android:layout_marginLeft="50dp" />

        <Button
            android:id="@+id/btnDead"
            style="@style/MyButtonStyle"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="80dp"
            android:text="@string/dead2"
            android:layout_marginLeft="200dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>