<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back_image2"
    tools:context=".detail_stock">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <Button
                android:id="@+id/btnBackDetails"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="@drawable/ic_back_btn"
                android:layout_marginLeft="10dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="6dp"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/ProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginTop="50dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar_circle"
                android:secondaryProgress="0" />

            <TextView
                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ProgressBar"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="50sp"
                android:fontFamily="@font/montserrat"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/fish_name2"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"/>
            <TextView
                android:id="@+id/tvFishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/fish_name_1"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/total_purchase"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"/>
                <TextView
                    android:id="@+id/tvTotalPur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/_700_kg"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/sold_quantity"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"/>
                <TextView
                    android:id="@+id/tvSoldQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/_300_kg"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/dealer_name"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"/>
            <TextView
                android:id="@+id/tvDealerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/madanlala_and_sons"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSoldDetails"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                style="@style/MyButtonStyle"
                android:text="@string/sold"
                android:textSize="35sp"
                android:layout_marginLeft="10dp" />
            <Button
                android:id="@+id/btnDeadDetails"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                style="@style/MyButtonStyle"
                android:text="@string/dead"
                android:textSize="35sp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>