<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="10dp"
    >

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="215dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead_stock_report"
            android:textSize="25sp"
            android:textColor="#707070"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deadQuantity"
            style="@style/MyEditTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:inputType="number"
            android:hint="@string/dead_quantity"
            android:layout_marginLeft="20dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deadReason"
            style="@style/MyEditTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="125dp"
            android:textSize="20sp"
            android:hint="@string/reason"
            android:layout_marginLeft="20dp" />




    </RelativeLayout>

</androidx.cardview.widget.CardView>